fixed whitespace

--- a/style.css
+++ b/style.css
@@ -91,7 +91,6 @@ header h1 {
 }
 
 section {
-    margin: 1em;
     padding: 1em;
 }
 
@@ -166,7 +165,7 @@ input[type = text], select {
 
 footer {
     background-color: rgba(97, 110, 255, 0.85);
-    padding: 2em;
+    padding: 2em 0;
     width: 100%;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
